fix wrapping on pre tags in the synopsis message

--- a/src/app/messages/messages.component.scss
+++ b/src/app/messages/messages.component.scss
@@ -21,5 +21,11 @@
          display: none;
      }
 
+     .messageContent {
+        pre {
+            white-space: pre-wrap;
+        }
+     }
+
      padding-bottom: 10px;
 }
